# career-ai

./: .gitignore  LICENSE  README-INTEGRAÇÃO.md  README.md  TASKS-V2-CHAT.MD  TASKS.MD  docker-compose.yml  modelagem-ameaca-sd.xlsx
apps/api/: .env  Dockerfile  README.md  database.db  migration.sql  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routers/: auth.py  users.py
apps/api/app/core/: config.py
apps/api/app/db/: crud.py  models.py  session.py
apps/api/app/schemas/: diagnostic.py  study_trail.py  user.py
apps/career-path/: .env  .env.example  Dockerfile  README.md  pyproject.toml  run_test.py  test_integration_a2a.py
apps/career-path/app/: agent.py  main.py  models.py  prompts.py  server.py
apps/profile-analysis/: Dockerfile  README.md  init.sh  pyproject.toml
apps/profile-analysis/app/: main.py
apps/ui/: .prettierignore  .prettierrc.js  README.md  eslint.config.mjs  package.json
apps/ui/app/: page.tsx
apps/ui/app/(auth)/: layout.tsx
apps/ui/app/(auth)/login/: page.tsx
apps/ui/app/(auth)/register/: page.tsx
apps/ui/app/(dashboard)/: layout.tsx
apps/ui/app/(dashboard)/chat/: page.tsx
apps/ui/app/(dashboard)/dashboard/: page.tsx
apps/ui/app/(dashboard)/profile/: page.tsx
apps/ui/components/: sidebar.tsx
apps/ui/components/ui/: dialog.tsx  form.tsx
