[project]
name = "career-path"
version = "0.1.0"
description = "Servidor A2A para trilhas de carreira e estudos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.0",
    "python-a2a>=0.5.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "build", "dist"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle, F: pyflakes, I: isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
